turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:26: error: identifier expected but '}' found.
}
^